services/example-01/kustomize/overlays/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${SERVICE}-ingress
  annotations:
    kubernetes.io/ingress.class: nginx-dev
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: ${SERVICE}-svc
              servicePort: http
            path: /hello-world(/|$)(.*)
